--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,24 @@
     />
   </head>
   <body>
-    <include src="./partials/page-header.html"></include>
-    <include src="./partials/hero-page.html"></include>
-    <include src="./partials/about.html"></include>
-    <include src="./partials/price.html"></include>
-    <include src="./partials/features.html"></include>
-    <include src="./partials/master.html"></include>
-    <include src="./partials/portfolio.html"></include>
-    <include src="./partials/footer.html"></include>
+    <header class="page-header">
+      <include src="./partials/page-header.html"></include>
+    </header>
+    <main>
+      <include src="./partials/hero-page.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/price.html"></include>
+      <include src="./partials/features.html"></include>
+      <include src="./partials/master.html"></include>
+      <include src="./partials/portfolio.html"></include>
+    </main>
+    <footer>
+      <include src="./partials/footer.html"></include>
+    </footer>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./slider.js"></script>
     <script src="./index.js"></script>
     <script src="./menu.js"></script>
-
-    <!-- JS Слайдера -->
-    <!-- <script></script> -->
   </body>
 </html>
